--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -14,7 +14,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      ssh:
+      ssh:true
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
@@ -30,7 +30,7 @@ env:
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
+  UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
