--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -14,7 +14,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      ssh:true
+      ssh:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
